static/core/css/style.css
html, body {
    background-color: rgb(226, 226, 226);
}

.box-radius {
    border-radius: 2em;
}


/* hamburger icon */
.menu-btn {
    position: relative;
    color: rgb(0, 0, 0);
    font-size: 35px;
    cursor: pointer;
}

/* sidebar content */
.side-bar {
    background: #1b1a1b;
    backdrop-filter: blur(15px);
    width: 250px;
    height: 100%;
    position: fixed;
    top: 0;
    left: -250px;
    overflow-y: auto;
    transition: 0.6s ease;
    transition-property: left;
}

.side-bar::-webkit-scrollbar {
    width: 0px;
}

.side-bar.active {
    left: 0;
}


.side-bar .menu {
    width: 100%;
    margin-top: 30px;
}

.side-bar .menu .item {
    position: relative;
    cursor: pointer;
}

.side-bar .menu .item a {
    color: #fff;
    font-size: 16px;
    text-decoration: none;
    display: block;
    padding: 5px 30px;
    line-height: 60px;
}

.side-bar .menu .item a:hover {
    background: #33363a;
    transition: 0.3s ease;
}

.side-bar .menu .item i {
    margin-right: 15px;
}

.side-bar .menu .item a .dropdown {
    position: absolute;
    right: 0;
    margin: 20px;
    transition: 0.3s ease;
}

.side-bar .menu .item .sub-menu {
    background: #262627;
    display: none;
}

.side-bar .menu .item .sub-menu a {
    padding-left: 80px;
}

.rotate {
    transform: rotate(90deg);
}

.close-btn {
    position: absolute;
    color: #fff;
    font-size: 23px;
    right: 0px;
    right: 20px;
    top: 10px;
    cursor: pointer;
}

/* other sidebar components */
.img-holder {
    max-width: 150px;
    height: 150px;
    overflow: hidden;
    margin-top: 40px;
    border-radius: 50%;
    border: 3px solid rgb(233, 233, 233);
}

.header {
    background: #33363a;
}


/* box styles */
.box-link {
    display: block;
}

/* .box:hover {
    box-shadow: 0px 0px 22px 5px rgba(0,0,0,0.57);
    -webkit-box-shadow: 0px 0px 22px 5px rgba(0,0,0,0.57);
    -moz-box-shadow: 0px 0px 22px 5px rgba(0,0,0,0.57);
} */


/* table box styles */
div.box td {
    padding: 12px 12px;
    vertical-align: middle !important;
}

div.box td:nth-child(1) {
    font-weight: 400;
}

div.box td:nth-child(2) {
    text-align: right;
    font-weight: 400;
    color:rgb(93, 93, 93);
}


/* toggle button styles */
.toggle {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    width: 62px;
    height: 32px;
    display: inline-block;
    position: relative;
    border-radius: 50px;
    overflow: hidden;
    outline: none;
    border: none;
    cursor: pointer;
    background-color: #707070;
    transition: background-color ease 0.3s;
}
  
.toggle:before {
    content: "on off";
    display: block;
    position: absolute;
    z-index: 2;
    width: 28px;
    height: 28px;
    background: #fff;
    left: 2px;
    top: 2px;
    border-radius: 50%;
    font: 10px/28px Helvetica;
    text-transform: uppercase;
    font-weight: bold;
    text-indent: -22px;
    word-spacing: 37px;
    color: #fff;
    text-shadow: -1px -1px rgba(0,0,0,0.15);
    white-space: nowrap;
    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
    transition: all cubic-bezier(0.3, 1.5, 0.7, 1) 0.3s;
}

.toggle:checked {
    background-color: #4CD964;
}

.toggle:checked:before {
    left: 32px;
}


/* other helpers */
.is-borderless {
    border: 0;
}

.is-full-width {
    width: 100%;
    max-width: 100%;
}

.box-blank {
    border: 6px solid #a9a9a9;
    border-radius: 30px;
    background: none;
}

.vh-center {
    padding: 30px 0;
    text-align: center;
}

